# gradio_client_envoy_friendly

./: README.md  pyproject.toml  requirements.txt
gradio_client/: __init__.py  client.py  package.json  pyresourcepool.py
