[tool.poetry]
name = "gradio-client"
version = "0.10.1.9"
description = "Envoy Friendly Gradio client"
authors = ["jchauhan <jitendra@detoxio.ai>"]
readme = "Readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fsspec = "*"
httpx = ">=0.24.1"
huggingface_hub = ">=0.19.3"
packaging = "*"
typing_extensions = "~4.0"
websockets = ">=10.0,<12.0"
PyResourcePool = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


